--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
