--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAGTPt6OFtgTmDMuILJNIpQXrcZM7krLJs"/>
+
         <activity android:name=".view.ui.activities.SplashscreenActivity"></activity>
         <activity android:name=".view.ui.activities.MainActivity">
             <intent-filter>
