--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAGTPt6OFtgTmDMuILJNIpQXrcZM7krLJs"/>
 
-        <activity android:name=".view.ui.activities.SplashscreenActivity"></activity>
-        <activity android:name=".view.ui.activities.MainActivity">
+        <activity android:name=".view.ui.activities.SplashscreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".view.ui.activities.MainActivity">
+
         </activity>
     </application>
 
